--- a/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
+++ b/WebContent/ITMILL/themes/default/orderedlayout/orderedlayout.css
@@ -17,3 +17,41 @@
 .i-orderedlayout-hspacing {
 	padding-left: 8px;
 }
+
+.i-orderedlayout-w2 .i-caption * { 
+	float:left; 
+	display: block;
+}
+.i-orderedlayout-w-e {
+	float:left; 	
+}
+	
+.i-orderedlayout-w1 {
+	text-align:left;	
+}
+	
+.i-orderedlayout-w2 .i-caption:after, .i-orderedlayout-w2:after {
+  	content: ".";
+	display: block;
+	height: 0;
+    clear: both;
+    visibility: hidden;
+}
+		
+.i-orderedlayout-w2 .i-caption, .i-orderedlayout-w2 {
+	display: inline-block;
+}
+
+/* Hides from IE-mac \*/
+* html .i-orderedlayout-w2 .i-caption, * html .i-orderedlayout-w2 { height: 1%; }
+.i-orderedlayout-w2 .i-caption, .i-orderedlayout-w2 { display: block; }
+/* End hide from IE-mac */
+
+/*
+.i-errorindicator {
+	background:transparent url(../icons/16/error.png) no-repeat scroll right top;
+	height:16px;
+	width:10px;
+	margin-left: 3px;
+}
+*/
